feat(esinf/TSP): don't print empty bundle lists